--- a/assets/scss/libs/_font_face.scss
+++ b/assets/scss/libs/_font_face.scss
@@ -1,15 +1,15 @@
 @charset "utf-8";
 
 //fontFace 생성
-@each $font-key, $font-name in $fonts-face-custom {
-  $font-path  : $web-font-path + $font-name;
+@each $web-font-name, $web-font-file in $fonts-face-custom {
+  $web-font-src  : $web-font-path + $web-font-file;
 
   @font-face {
-    font-family: $font-key;
-    src: url( $font-path +'.eot'); // IE9 Compat Modes
-    src: url( $font-path + '.eot?#iefix') format('embedded-opentype'), // IE6-IE8
-    /*local(※), */url($font-path + '.woff') format('woff'), // Modern Browsers
-    url($font-path + '.ttf') format('truetype'); // Safari, Android, iOS
+    font-family: $web-font-name;
+    src: url( $web-font-src +'.eot'); // IE9 Compat Modes
+    src: url( $web-font-src + '.eot?#iefix') format('embedded-opentype'), // IE6-IE8
+    /*local(※), */url($web-font-src + '.woff') format('woff'), // Modern Browsers
+    url($web-font-src + '.ttf') format('truetype'); // Safari, Android, iOS
 
     font-style: normal;
     font-weight: normal;
