--- a/assets/scss/libs/_normalize.scss
+++ b/assets/scss/libs/_normalize.scss
@@ -255,7 +255,7 @@ input[type="radio"] {
   padding: 0; // 2
 }
 
-// Fix the cursor style for Chrome's increment/decrement buttons. For certain
+// Fix the cursor style for Chrome'mixins increment/decrement buttons. For certain
 // `font-size` values of the `input`, it causes the cursor style of the
 // decrement button to change from `default` to `text`.
 input[type="number"]::-webkit-inner-spin-button,
