--- a/assets/scss/utils/mixins/_sample.scss
+++ b/assets/scss/utils/mixins/_sample.scss
@@ -224,3 +224,27 @@
         src: $src;
     }
 }
+
+// Typography
+$base: 16;
+
+// 글꼴
+$serief: 'Tiems New Roman', Serief;
+$sans-serief: Verdana, Sans-Serief;
+
+$serief-ko: Gulim, Serief;
+$sans-serief-ko: 'Nanum Gothic', Dotum, Sans-Serief;
+
+// 구글 웹폰트
+$noto-serif: 'Noto-Serief:400,700';
+$noto-sans: 'Noto+Sans:400,700';
+$monoton: 'Monoton';
+
+$webfont: $sans-serief-ko;
+
+// * --------------------------------
+// * 웹폰트 모듈
+// * 사용 시, 주의할 점!!!
+// *보간법을 사용할 경우는 url() 사용!!!
+// * --------------------------------
+@import url('http://fonts.googleapis.com/css?family=#{$webfont}');
