--- a/src/assets/scss/df_core/common/_base.scss
+++ b/src/assets/scss/df_core/common/_base.scss
@@ -179,7 +179,7 @@ input[type="checkbox"] {
 
 // input style
 #{$_text-inputs-list}{
-    border: 1px solid #fff;
+    border: 1px solid #666;
     outline: none;
     vertical-align: baseline;
     &::placeholder {
@@ -196,13 +196,14 @@ textarea {
     resize: none;
 }
 
-#{$_text-inputs-list}:focus, select:focus{
-    border: 1px solid #000;
-}
-
-#{$_text-inputs-list}:disabled, select:disabled {
-    background-color: #fff;
-    color: #000;
+#{$_text-inputs-list}, select {
+    &:focus{
+        border: 1px solid #000;
+    }
+    &:disabled{
+        background-color: #fff;
+        color: #000;
+    }
 }
 
 input::-webkit-outer-spin-button,
