--- a/src/assets/scss/df_core/globalvars/variables/_fonts.scss
+++ b/src/assets/scss/df_core/globalvars/variables/_fonts.scss
@@ -19,7 +19,7 @@ $fonts-face-custom:(
 
 // 기본 폰트 스타일 정의
 $fonts-default: (
-    font-name:      unquote("'Malgun Gothic', '맑은 고딕', AppleGothicNeoSD, 'Apple SD 산돌고딕 Neo', 'Microsoft NeoGothic', 'Droid sans', Dotum, 돋움, 굴림, arial, sans-serif"),
+    font-name:      unquote("'Malgun Gothic', '맑은 고딕', 'Apple SD Gothic Neo', 'Apple SD 고딕 Neo', 'Microsoft NeoGothic', 'Droid sans', Dotum, 돋움, 굴림, arial, Helvetica, sans-serif"),
     font-size:      12px,
     line-height:    1.3
 ) !global !default;
