--- a/en/assets/scss/site_common/_site_common_styles.scss
+++ b/en/assets/scss/site_common/_site_common_styles.scss
@@ -1,46 +1,51 @@
 @import "styles/common_classes";
 
 /* Web Fonts */
-
 @font-face {
     font-family:notosans-black;
-    src: //url('../fonts/NotoSansKR-Black.woff') format('woff'),
-            url('../fonts/NotoSansKR-Black.otf') format('opentype');
+    src: url('../fonts/NotoSansKR-Black.woff2') format('woff2'),
+    url('../fonts/NotoSansKR-Black.woff') format('woff'),
+    url('../fonts/NotoSansKR-Black.otf') format('opentype');
     text-rendering: optimizeLegibility;
 }
 
 @font-face {
     font-family:notosans-bold;
-    src: //url('../fonts/NotoSansKR-Bold.woff') format('woff'),
-            url('../fonts/NotoSansKR-Bold.otf') format('opentype');
+    src: url('../fonts/NotoSansKR-Bold.woff2') format('woff2'),
+    url('../fonts/NotoSansKR-Bold.woff') format('woff'),
+    url('../fonts/NotoSansKR-Bold.otf') format('opentype');
     text-rendering: optimizeLegibility;
 }
 
 @font-face {
     font-family:notosans-regular;
-    src: //url('../fonts/NotoSansKR-Regular.woff') format('woff'),
-            url('../fonts/NotoSansKR-Regular.otf') format('opentype');
+    src: url('../fonts/NotoSansKR-Regular.woff2') format('woff2'),
+    url('../fonts/NotoSansKR-Regular.woff') format('woff'),
+    url('../fonts/NotoSansKR-Regular.otf') format('opentype');
     text-rendering: optimizeLegibility;
 }
 
 @font-face {
     font-family:notosans-medium;
-    src: //url('../fonts/NotoSansKR-Medium.woff') format('woff'),
-            url('../fonts/NotoSansKR-Medium.otf') format('opentype');
+    src: url('../fonts/NotoSansKR-Medium.woff2') format('woff2'),
+    url('../fonts/NotoSansKR-Medium.woff') format('woff'),
+    url('../fonts/NotoSansKR-Medium.otf') format('opentype');
     text-rendering: optimizeLegibility;
 }
 
 @font-face {
     font-family:notosans-light;
-    src: //url('../fonts/NotoSansKR-Light.woff') format('woff'),
-            url('../fonts/NotoSansKR-Light.otf') format('opentype');
+    src: url('../fonts/NotoSansKR-Light.woff2') format('woff2'),
+    url('../fonts/NotoSansKR-Light.woff') format('woff'),
+    url('../fonts/NotoSansKR-Light.otf') format('opentype');
     text-rendering: optimizeLegibility;
 }
 
 @font-face {
     font-family:notosans-thin;
-    src: //url('../fonts/NotoSansKR-Thin.woff') format('woff'),
-            url('../fonts/NotoSansKR-Thin.otf') format('opentype');
+    src: url('../fonts/NotoSansKR-Thin.woff2') format('woff2'),
+    url('../fonts/NotoSansKR-Thin.woff') format('woff'),
+    url('../fonts/NotoSansKR-Thin.otf') format('opentype');
     text-rendering: optimizeLegibility;
 }
 
@@ -50,7 +55,6 @@
     url('../fonts/parkdoni.otf') format('opentype');
     text-rendering: optimizeLegibility;
 }
-
 body {
     font: 16px/1.5 'notosans-medium', 'dotum', 'sans-serif';
     letter-spacing: -0.02em;
