세번째 섹션 스크롤 테스트

--- a/en/assets/scss/default/styles/_helpers.scss
+++ b/en/assets/scss/default/styles/_helpers.scss
@@ -17,6 +17,9 @@
 .show{display:block !important;}
 .visible-hide { visibility: hidden !important;}
 .visible-show { visibility: visible !important;}
+.overflow-hidden{
+  overflow: hidden;
+}
 
 // text-align
 .talign{
