gulp simple version

--- a/template-2-gulp-simple/src/assets/scss/core/_variables.scss
+++ b/template-2-gulp-simple/src/assets/scss/core/_variables.scss
@@ -43,13 +43,12 @@ $default: #686868;
 // keyword Colors
 $black: #000;
 $white: #fff;
-$light: #ECECECFF !default;
-$dark: #1A1A1AFF !default;
-$primary: #0097F6FF !default;
-$secondary: #0ED058FF;
+$light: #ECECEC !default;
+$dark: #1A1A1A !default;
+$primary: #0097F6 !default;
+$secondary: #0ED058;
 $success: $secondary !default;
-$warning: #FFB300FF !default;
-$danger: #FF2727FF !default;
-$special: #830ED0FF !default;
-
+$warning: #B300FF !default;
+$danger: #FF2727 !default;
+$special: #830ED0 !default;
 
